New post on cross compilation

--- a/source/_posts/2020-06-24-wasm-gsl.md
+++ b/source/_posts/2020-06-24-wasm-gsl.md
@@ -18,9 +18,9 @@ comments: true
 In this post I'll explore how to use an existing C library in a JavaScript with WebAssembly.
 
 This uses information from previous posts for
-[dataframes](https://rob-blackbourn.github.io/blog/webassembly/wasm/array/arrays/javascript/c/dataframe/libc/wasm-libc/clang/2020/06/14/wasm-dataframe-libc.html),
+[dataframes](https://rob-blackbourn.github.io/blog/2020/06/14/wasm-dataframe-libc/),
 and
-[wasi](https://rob-blackbourn.github.io/blog/webassembly/wasm/strings/javascript/c/libc/wasm-libc/clang/2020/06/20/wasm-stdout-stderr.html).
+[wasi](https://rob-blackbourn.github.io/blog/2020/06/20/wasm-stdout-stderr/).
 
 You can find the source code
 [here](https://github.com/rob-blackbourn/example-wasm-gsl).
@@ -50,7 +50,7 @@ put the `bin` directories from all on my path.
 I decided to use the
 [GNU Scientific Library](https://www.gnu.org/software/gsl)
 as it is written in plain old C, and I can use it to further the
-[dataframes](https://rob-blackbourn.github.io/blog/webassembly/wasm/array/arrays/javascript/c/dataframe/libc/wasm-libc/clang/2020/06/14/wasm-dataframe-libc.html)
+[dataframes](https://rob-blackbourn.github.io/blog/2020/06/14/wasm-dataframe-libc/)
 project I have discuessed in previous posts.
 
 Compiling it proved to be remarkedly straightforward. After downloading and
