--- a/source/_posts/2020-06-24-wasm-gsl.md
+++ b/source/_posts/2020-06-24-wasm-gsl.md
@@ -53,7 +53,7 @@ as it is written in plain old C, and I can use it to further the
 [dataframes](https://rob-blackbourn.github.io/blog/2020/06/14/wasm-dataframe-libc/)
 project I have discuessed in previous posts.
 
-Compiling it proved to be remarkedly straightforward. After downloading and
+Compiling it proved to be remarkably straightforward. After downloading and
 unpacking the tarball I did the following.
 
 ```bash
@@ -78,12 +78,12 @@ LD=wasm-ld \
     --host=wasm32-wasi \
     --enable-shared=no
 
-# build and install it (you need to have premissions to /opt/gsl-2.6)
+# build and install it (you need to have permissions to /opt/gsl-2.6)
 make install
 ```
 
 Amazingly that just worked. The result of the install was the folder
-`/opt/gsl-2.6` with three subfolders: `include`, `lib`, and `share`.
+`/opt/gsl-2.6` with three sub-folders: `include`, `lib`, and `share`.
 
 ## Testing the Static Library
 
@@ -136,7 +136,7 @@ version.o: WebAssembly (wasm) binary module version 0x1 (MVP)
 It seems that the "object" files are themselves wasm, which get linked in to the
 finaly module, which is itself wasm. Interesting!
 
-We can run the "executbale" file with `wasmer`. Wasmer is a runtime engine for WebAssembly
+We can run the "executable" file with `wasmer`. Wasmer is a runtime engine for WebAssembly
 modules.
 
 ```bash
@@ -200,7 +200,7 @@ To use the aggregate function I add it to the `setup-wasi.js`.
 You can see here I'm calling the raw gsl function `gsl_stats_mean` (I needed the
 arrow function to provide a `stride` parameter of `1`). What I want to show is
 that there is little or no requirement for a binding library. We're using generic
-marshelling code.
+marshalling code.
 
 The `Series.js` needs a small patch to handle functions that return a single
 value, rather than a new series. I added a check for the return value of the
